Serviços para popular tabelas
Serviços para popular tabelas do Cadastrei com informações tanto de produção quanto homologação do banco HCM. Interface com possibilidade de alterar o apontamento do ambiente. Serviços para produção e homologação.

--- a/.env.example
+++ b/.env.example
@@ -14,10 +14,22 @@ SOURCE_SCHEMA_PROD=Vetorh_Prod
 TARGET_DATABASE=Cadastrei
 TARGET_SCHEMA=dbo
 TARGET_MOTORISTA_TABLE=MotoristaCadastro
+TARGET_AFASTAMENTO_TABLE=Afastamento
 
 # Sync Motoristas
 MOTORISTA_SYNC_INTERVAL_SECONDS=30
 MOTORISTA_SYNC_BATCH_SIZE=500
+
+# Sync Afastamentos
+AFASTAMENTO_SYNC_INTERVAL_SECONDS=30
+AFASTAMENTO_SYNC_BATCH_SIZE=500
+AFASTAMENTO_SYNC_DATA_INICIO=
+
+# Servicos Windows (NSSM)
+WIN_SERVICE_MOTORISTAS_DEV=CadastreiMotoristasHom
+WIN_SERVICE_MOTORISTAS_PROD=CadastreiMotoristasProd
+WIN_SERVICE_AFASTAMENTOS_DEV=CadastreiAfastamentosHom
+WIN_SERVICE_AFASTAMENTOS_PROD=CadastreiAfastamentosProd
 
 # API (opcional neste momento)
 API_LOGIN_URL=
