--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 DB_SERVER=192.168.254.100
 DB_USER=softran
 DB_PASSWORD=sof1209
-DB_DRIVER=ODBC Driver 18 for SQL Server
+DB_DRIVER=ODBC Driver 11 for SQL Server
 DB_ENCRYPT=no
 DB_TRUST_CERT=no
 
@@ -35,3 +35,24 @@ WIN_SERVICE_AFASTAMENTOS_PROD=CadastreiAfastamentosProd
 API_LOGIN_URL=
 API_USER=
 API_PASS=
+API_BASE_URL=
+API_TIMEOUT_SECONDS=30
+API_MOTORISTA_ENDPOINT=/v1/motorista
+API_AFASTAMENTO_ENDPOINT=/v1/afastamento
+
+# Fila de envio para API
+API_SYNC_INTERVAL_SECONDS=15
+API_SYNC_BATCH_SIZE_MOTORISTAS=100
+API_SYNC_BATCH_SIZE_AFASTAMENTOS=100
+API_SYNC_MAX_TENTATIVAS=10
+API_SYNC_LOCK_TIMEOUT_MINUTES=15
+API_SYNC_RETRY_BASE_SECONDS=60
+API_SYNC_RETRY_MAX_SECONDS=3600
+
+# Defaults para enriquecer payload de motorista
+API_DEFAULT_CIDADE=NAO INFORMADO
+API_DEFAULT_UF=SC
+API_MOTORISTA_SINDICATO_NOME=
+API_MOTORISTA_SINDICATO_CNPJ=
+API_MOTORISTA_SINDICATO_CIDADE=
+API_MOTORISTA_SINDICATO_UF=
