Adicionando comunicação com a API2

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,10 @@ WIN_SERVICE_MOTORISTAS_DEV=CadastreiMotoristasHom
 WIN_SERVICE_MOTORISTAS_PROD=CadastreiMotoristasProd
 WIN_SERVICE_AFASTAMENTOS_DEV=CadastreiAfastamentosHom
 WIN_SERVICE_AFASTAMENTOS_PROD=CadastreiAfastamentosProd
+WIN_SERVICE_API_MOTORISTAS_DEV=CadastreiApiMotoristasHom
+WIN_SERVICE_API_MOTORISTAS_PROD=CadastreiApiMotoristasProd
+WIN_SERVICE_API_AFASTAMENTOS_DEV=CadastreiApiAfastamentosHom
+WIN_SERVICE_API_AFASTAMENTOS_PROD=CadastreiApiAfastamentosProd
 
 # API (opcional neste momento)
 API_LOGIN_URL=
