--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,9 @@ WIN_SERVICE_API_MOTORISTAS_DEV=CadastreiApiMotoristasHom
 WIN_SERVICE_API_MOTORISTAS_PROD=CadastreiApiMotoristasProd
 WIN_SERVICE_API_AFASTAMENTOS_DEV=CadastreiApiAfastamentosHom
 WIN_SERVICE_API_AFASTAMENTOS_PROD=CadastreiApiAfastamentosProd
+# Opcional: servicos API unicos (independente de ambiente)
+WIN_SERVICE_API_MOTORISTAS=CadastreiApiMotoristas
+WIN_SERVICE_API_AFASTAMENTOS=CadastreiApiAfastamentos
 
 # API (opcional neste momento)
 API_LOGIN_URL=
@@ -60,3 +63,8 @@ API_MOTORISTA_SINDICATO_NOME=
 API_MOTORISTA_SINDICATO_CNPJ=
 API_MOTORISTA_SINDICATO_CIDADE=
 API_MOTORISTA_SINDICATO_UF=
+API_EMPREGADOR_CODIGO=152
+API_EMPREGADOR_CNPJ=33899204000165
+API_EMPREGADOR_NOME=COMTRASIL COMERCIO E TRANSPORTES LTDA
+API_EMPREGADOR_CIDADE=BRUMADO
+API_EMPREGADOR_UF=BA
